Update and Fix + Deprecated elements